--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ title:  The EinsteinPy Project
 
 {% include glance.html %}
 
-{% include scenarios.html %}
+<!-- {% include scenarios.html %}
 
-{% include showcase.html %}
+{% include showcase.html %} -->
 
 {% include connect.html %}
